# RM_NHS_HNU

./: README_git.md  autostart.sh  autostart.sh.bak  autostart1.sh  kill.sh  常用命令一览.md
Autostart/: robo_watch_dog.sh
armor_detector/: CMakeLists.txt  include.tar.xz  package.xml  src.tar.xz
armor_detector/include/armor_detector/: armor_detector.hpp  armor_detector_node.hpp  armor_pose_estimator.hpp  ba_solver.hpp  graph_optimizer.hpp  light_corner_corrector.hpp  number_classifier.hpp  types.hpp
armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp  armor_pose_estimator.cpp  ba_solver.cpp  graph_optimizer.cpp  light_corner_corrector.cpp  number_classifier.cpp
armor_detector/test/: test_detector.cpp
armor_solver/: CMakeLists.txt  package.xml
armor_solver/beifen-include/include/armor_solver/: armor_solver.hpp  armor_solver_node.hpp
armor_solver/beifen-src/src/: armor_solver.cpp  armor_solver_node.cpp  armor_tracker.cpp
armor_solver/include/armor_solver/: armor_solver.hpp  armor_solver_node.hpp  armor_tracker.hpp  motion_model.hpp
armor_solver/src/: armor_solver.cpp  armor_solver_node.cpp  armor_tracker.cpp
auto_aim_bringup/: CMakeLists.txt  package.xml
auto_aim_bringup/config/: camera_info.yaml
auto_aim_bringup/config/node_params/: armor_detector_params.yaml  armor_solver_params.yaml  camera_driver_params.yaml
auto_aim_bringup/launch/: auto_aim.launch.py  foxglove.launch.py
auto_aim_bringup/tools/: sim_bridge.py
bubble_decision/bubble_decision/behavior_engine/: README.md  branch.py
bubble_protocol/bubble_protocol/: dispatch.py  hardware.py  protocol.py  robot_status.py
bubble_protocol/launch/: infantry_serial_launch.py  sentry_down_serial_launch.py  sentry_up_serial_launch.py
example_topic_rclcpp/: CMakeLists.txt  package.xml
example_topic_rclcpp/src/: tp_01.cpp
navigation2_rm/: CMakeLists.txt  package.xml
navigation2_rm/launch/: burger_nav2.launch.py  localization.launch.py  navigation2.launch.py  temp.launch.py
navigation2_rm/map/: map01.pgm  map01.yaml  map_sim.pgm  map_sim.yaml  map_tmp.pgm  map_tmp.yaml
navigation2_rm/param/: burger.yaml  rm.yaml  rm_false.yaml
rm_bringup/config/: camera_info.yaml
rm_bringup/config/node_params/: armor_detector_params.yaml
rm_bringup/launch/: bringup.launch.py
rm_description/: CMakeLists.txt
rm_description/launch/: model.launch.py
rm_description/urdf/: rm_gimbal.urdf.xacro
rm_interfaces/msg/: GimbalCmd.msg
rm_robot_description/urdf/: rm_gimbal.urdf.xacro
rm_utils/: CMakeLists.txt
rm_utils/include/rm_utils/: assert.hpp  common.hpp  heartbeat.hpp  url_resolver.hpp
rm_utils/include/rm_utils/logger/: exception.hpp  log.hpp  logger_pool.hpp  types.hpp
rm_utils/include/rm_utils/logger/impl/: global_mutex.hpp  logger_impl.hpp  writer.hpp
rm_utils/include/rm_utils/math/: extended_kalman_filter.hpp  manual_compensator.hpp  particle_filter.hpp  pnp_solver.hpp  trajectory_compensator.hpp  utils.hpp
rm_utils/src/: heartbeat.cpp  url_resolver.cpp
rm_utils/src/logger/: logger_impl.cpp  logger_pool.cpp  writer.cpp
rm_utils/src/math/: extended_kalman_filter.cpp  manual_compensator.cpp  pnp_solver.cpp  trajectory_compensator.cpp  utils.cpp
rm_vision_ros2_hik_camera/: CMakeLists.txt  README.md  package.xml
rm_vision_ros2_hik_camera/config/: camera_info.yaml  camera_params.yaml
rm_vision_ros2_hik_camera/hikSDK/include/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  PixelType.h
rm_vision_ros2_hik_camera/src/: hik_camera_node.cpp
rmoss_projectile_motion/include/rmoss_projectile_motion/: gimbal_transform_tool.hpp
rmoss_projectile_motion/src/: gimbal_transform_tool.cpp
vision_opencv/cv_bridge/: CMakeLists.txt
yaw_data_fusion/: yaw_fusion_node.py
